k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: demo-voting-app
    tier: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
    tier: redis
  type: ClusterIP # Ici, on veut un ClusterIP classique avec une IP interne virtuelle
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: demo-voting-app
    tier: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      tier: redis
  template:
    metadata:
      labels:
        app: redis
        tier: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          resources:
            requests:
                memory: "64Mi"
                cpu: "250m"
            limits:
                memory: "128Mi"
                cpu: "500m"
          ports:
            - containerPort: 6379
              name: redis
