k8s/result.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: demo-voting-app
    tier: result
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: result
    tier: result
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  labels:
    app: demo-voting-app
    tier: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
      tier: result
  template:
    metadata:
      labels:
        app: result
        tier: result
    spec:
      imagePullSecrets:
        - name: dockersecrets
      containers:
        - name: result
          image: mulema/result:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
